Fixed preloader on Safari.

--- a/Main/main.css
+++ b/Main/main.css
@@ -78,6 +78,7 @@ body.font2 :is(h1, h2, h3, h4, h5, h6) {
 }
 
 .preloader-svg {
+	width: 100%;
 	transition: transform linear 1s;
 }
 .preloader-svg.draw-start {
